--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="pricing-item">
               <h3>Pemrograman dan Pengembangan Aplikasi</h3>
-              <h4><span>Mulai</span><sup>Rp</sup>450.000</h4>
+              <h4><span>Mulai</span><sup>Rp</sup>250.000</h4>
               <ul>
                 <li><i class="bi bi-check"></i> <span>Pengembangan aplikasi mobile atau web dengan fitur menengah</span></li>
                 <li><i class="bi bi-check"></i> <span>Integrasi dengan API eksternal dan layanan pihak ketiga</span></li>
@@ -558,21 +558,21 @@
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="pricing-item">
               <h3>Bantuan Proyek Akademik</h3><br>
-              <h4><span>Mulai</span><sup>Rp</sup>350.000</h4>
+              <h4><span>Mulai</span><sup>Rp</sup>150.000</h4>
               <ul>
                 <li><i class="bi bi-check"></i> <span>Desain dan pembuatan slide presentasi</span></li>
                 <li><i class="bi bi-check"></i> <span>Latihan dan bimbingan dalam teknik presentasi</span></li>
                 <li><i class="bi bi-check"></i> <span>Feedback dan saran untuk penyampaian yang lebih baik</span></li>
                 <li><i class="bi bi-check"></i> <span>Dukungan teknis selama 10 Hari</span></li>
               </ul><br>
-              <a href="#" class="buy-btn">Beli Sekarang</a>
+              <a href="https://wa.me/6287851381480?text=Selamat%20Siang%20FAMK%20Web%2C%20Ada%20Yang%20Ingin%20Aku%20Butuhkan" class="buy-btn">Beli Sekarang</a>
             </div>
           </div>
 
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="pricing-item">
               <h3>Debugging dan Optimasi Kode</h3>
-              <h4><span>Mulai</span><sup>Rp</sup>500.000</h4>
+              <h4><span>Mulai</span><sup>Rp</sup>50.000</h4>
               <ul>
                 <li><i class="bi bi-check"></i> <span>Analisis dan identifikasi bug dalam kode</li>
                 <li><i class="bi bi-check"></i> <span>Perbaikan kesalahan dasar dan masalah sintaksis</span></li>
