--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                 <li><i class="bi bi-check"></i> <span>Fitur-fitur seperti manajemen data, dan integrasi sistem pembayaran</span></li>
                 <li><i class="bi bi-check"></i> <span>Dukungan teknis selama 14 Hari</span></li>
               </ul>
-              <a href="#" class="buy-btn">Beli Sekarang</a>
+              <a href="https://wa.me/6287851381480?text=Selamat%20Siang%20FAMK%20Web%2C%20Ada%20Yang%20Ingin%20Aku%20Butuhkan" class="buy-btn">Beli Sekarang</a>
             </div>
           </div>
 
@@ -579,7 +579,7 @@
                 <li><i class="bi bi-check"></i> <span>Uji coba dan verifikasi hasil optimasi</span></li>
                 <li><i class="bi bi-check"></i> <span>Dukungan email selama 12 Hari</span></li>
               </ul><br>
-              <a href="#" class="buy-btn" style="margin-top: 40px;">Beli Sekarang</a>
+              <a href="https://wa.me/6287851381480?text=Selamat%20Siang%20FAMK%20Web%2C%20Ada%20Yang%20Ingin%20Aku%20Butuhkan" class="buy-btn" style="margin-top: 40px;">Beli Sekarang</a>
             </div> 
            </div>
         </div>
